--- a/src/styles/components/commons/navbar.scss
+++ b/src/styles/components/commons/navbar.scss
@@ -9,7 +9,10 @@
     padding: 1rem 1rem;
     display: grid;
     grid-template-columns: 20% 1fr;
-    justify-content: center;
+
+    @include breakpoint(large){
+      grid-template-columns: 1fr;
+    }
 
     &.shadow-dark {
       box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.45);
@@ -20,16 +23,6 @@
     }
 
     /*  Breakpoints */
-    @include breakpoint(large) {
-      padding: 1rem 3rem;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include breakpoint(medium) {
-      justify-items: center;
-      align-items: center;
-      grid-template-columns: repeat(2, 1fr);
-    }
 
     /* Button Menu Mobile */
     .nav {
@@ -181,16 +174,23 @@
 
     /* logo */
     > .link-logo {
+      margin-left: 2rem;
       position: relative;
       z-index: 2;
-      margin-left: 2rem;
-
+        @include breakpoint(large){
+          &.center{
+             display: flex;
+             justify-content: center;
+             align-items: center;
+             margin-left: 0;
+          }
+        }
       > .logo {
         width: 60%;
-        max-width: 80%;
-
+        max-width: 60%;
+        max-height: 70px;
         @include breakpoint(medium) {
-          width: 80%;
+          width: 20%;
         }
        
       }
@@ -198,87 +198,6 @@
 
     /* #endregion */
 
-    .content {
-      margin: auto;
-      margin-right: 0;
-      display: none;
-
-      @include breakpoint(medium) {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-      }
-
-      /* menu-list */
-      > .menu-list {
-        margin: 0 0 0 1rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        &.black {
-          color: $color-text-black;
-        }
-
-        &.blue {
-          color: $color-text-blue;
-        }
-
-        @include breakpoint(medium) {
-          margin: auto;
-        }
-
-        > .item {
-          text-transform: uppercase;
-          font-family: 'Roboto', sans-serif;
-          white-space: nowrap;
-          margin: 0 1rem;
-
-          .number {
-            position: relative;
-            bottom: 6px;
-            font-size: 20px;
-
-            &.white {
-              color: $color-text-white;
-            }
-          }
-
-          &:nth-child(5) {
-            position: relative;
-            bottom: 8px;
-            width: 40px;
-            height: 40px;
-
-            .icon {
-              position: relative;
-              top: 3px;
-              width: 100%;
-              height: 100%;
-
-              .blue {
-                fill: $color-text-blue;
-              }
-
-              .black {
-                fill: $color-text-black;
-              }
-            }
-          }
-
-          > .anchor {
-            &:hover {
-              text-decoration: underline;
-            }
-          }
-        }
-      }
-
-      /* #endregion */
-
-      
-    }
+   
   }
 }
