--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Server | Home</title>
+    <title>Marvel | Home</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400,600,700" rel="stylesheet" />
   </head>
@@ -18,26 +18,11 @@
         </div>
 
         <!-- logo -->
-        <a class="link-logo" href="/">
-          Logo
+        <a class="link-logo center" href="/">
+          <img src="images/marvel.png" class="logo">
         </a>
         <!-- /logo -->
-        <div class="content">
-          <ul class="menu-list blue">
-            <li class="item">
-              <a class="anchor" href="#">Link 1</a>
-            </li>
-            <li class="item">
-              <a class="anchor" href="#">Link 2</a>
-            </li>
-            <li class="item">
-              <a class="anchor" href="#">Link 3</a>
-            </li>
-            <li class="item">
-              <a class="anchor" href="#">Link 4</a>
-            </li>
-          </ul>
-        </div>
+        
         <!-- Menu Mobile -->
         <nav class="nav">
           <ul class="nav-list">
